kubernetes/curlpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curlpod
spec:
  containers:
  - name: curlpod
    image: curlimages/curl
    command: ["sh", "-c", "while true; do sleep 3600; done"] #sleep to keep container alive
